fixing blank record issue

--- a/force-app/main/default/classes/ConversationToolkitEinsteinLanguage.cls
+++ b/force-app/main/default/classes/ConversationToolkitEinsteinLanguage.cls
@@ -29,21 +29,30 @@ public with sharing class ConversationToolkitEinsteinLanguage {
         System.debug('Retrieving Last Einstein Insight ' + channelType + recordId);
 
         Einstein_Insight__c eiRecord = new Einstein_Insight__c();
-        if (channelType == 'Voice'){
-            eiRecord = [SELECT ID, Intent__c, Intent_Confidence__c, Sentiment__c, Sentiment_Confidence__c, Aggregated_Sentiment__c, Position__c, CreatedDate FROM Einstein_Insight__c WHERE Voice_Call__c =:recordId ORDER BY CreatedDate DESC LIMIT 1];
-        } else if (channelType == 'Chat'){
-            eiRecord = [SELECT ID, Intent__c, Intent_Confidence__c, Sentiment__c, Sentiment_Confidence__c, Aggregated_Sentiment__c, Position__c, CreatedDate FROM Einstein_Insight__c WHERE Chat_Transcript__c =:recordId ORDER BY CreatedDate DESC LIMIT 1];
-        } else if (channelType == 'Messaging'){
-            eiRecord = [SELECT ID, Intent__c, Intent_Confidence__c, Sentiment__c, Sentiment_Confidence__c, Aggregated_Sentiment__c, Position__c, CreatedDate FROM Einstein_Insight__c WHERE Messaging_Session__c =:recordId ORDER BY CreatedDate DESC LIMIT 1];
-        }
-        if(eiRecord == null){
-            eiRecord = new Einstein_Insight__c();
+        //default values
+        eiRecord.Aggregated_Sentiment__c = 0;
+        eiRecord.Sentiment__c = 'neutral'; // no intent
+        eiRecord.Sentiment_Confidence__c = 0.0;
+        eiRecord.Intent__c = ''; // no intent
+        eiRecord.Intent_Confidence__c = 0.0;
+
+        try{
+
+            if (channelType == 'Voice'){
+                eiRecord = [SELECT ID, Intent__c, Intent_Confidence__c, Sentiment__c, Sentiment_Confidence__c, Aggregated_Sentiment__c, Position__c, CreatedDate FROM Einstein_Insight__c WHERE Voice_Call__c =:recordId ORDER BY CreatedDate DESC LIMIT 1];
+            } else if (channelType == 'Chat'){
+                eiRecord = [SELECT ID, Intent__c, Intent_Confidence__c, Sentiment__c, Sentiment_Confidence__c, Aggregated_Sentiment__c, Position__c, CreatedDate FROM Einstein_Insight__c WHERE Chat_Transcript__c =:recordId ORDER BY CreatedDate DESC LIMIT 1];
+            } else if (channelType == 'Messaging'){
+                eiRecord = [SELECT ID, Intent__c, Intent_Confidence__c, Sentiment__c, Sentiment_Confidence__c, Aggregated_Sentiment__c, Position__c, CreatedDate FROM Einstein_Insight__c WHERE Messaging_Session__c =:recordId ORDER BY CreatedDate DESC LIMIT 1];
+            }
+        } catch (System.QueryException qe){
             eiRecord.Aggregated_Sentiment__c = 0;
             eiRecord.Sentiment__c = 'neutral'; // no intent
             eiRecord.Sentiment_Confidence__c = 0.0;
             eiRecord.Intent__c = ''; // no intent
             eiRecord.Intent_Confidence__c = 0.0;
         }
+        
         return eiRecord;
     }
     
